feat: Update to java 21 and changing to nettyserverbuilder for performance improvements
Signed-off-by: pweiber <periclesweiber@ciandt.com>